--- a/causes.html
+++ b/causes.html
@@ -340,75 +340,147 @@
         <div
           class="text-center mx-auto mb-5 wow fadeInUp"
           data-wow-delay="0.1s"
-          style="max-width: 500px"
+          style="max-width: 520px"
         >
           <div
             class="d-inline-block rounded-pill bg-secondary text-primary py-1 px-3 mb-3"
           >
-            Testimonial
+            Our Impact
           </div>
-          <h1 class="display-6 mb-5">
-            Trusted By Thousands Of People And Nonprofits
-          </h1>
         </div>
+
         <div
           class="owl-carousel testimonial-carousel wow fadeInUp"
           data-wow-delay="0.1s"
         >
+          <!-- Country Item -->
           <div class="testimonial-item text-center">
             <img
-              class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4"
-              src="img/testimonial-1.jpg"
-              style="width: 100px; height: 100px"
+              class="img-fluid rounded-circle p-2 mx-auto mb-4"
+              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSzPtz1wA0MVRT138Xqu1CScqCheWyuRY6slg&s"
+              alt="Nigeria Flag"
+              style="width: 100px; height: 100px; object-fit: cover"
             />
-            <div class="testimonial-text rounded text-center p-4">
-              <p>
-                Clita clita tempor justo dolor ipsum amet kasd amet duo justo
-                duo duo labore sed sed. Magna ut diam sit et amet stet eos sed
-                clita erat magna elitr erat sit sit erat at rebum justo sea
-                clita.
-              </p>
-              <h5 class="mb-1">Doner Name</h5>
-              <span class="fst-italic">Profession</span>
+
+            <div
+              class="testimonial-text rounded text-center p-4"
+              style="
+                position: relative;
+                height: 300px;
+                background-image: url(&quot;https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQUaNTeo_9g4YII_dSMTIwZbLpawt-OOGmQzw&s&quot;);
+                background-repeat: no-repeat;
+                background-position: center;
+                background-size: cover;
+                overflow: hidden;
+              "
+            >
+              <!-- Overlay -->
+              <div
+                style="
+                  position: absolute;
+                  inset: 0;
+                  background: rgba(0, 0, 0, 0.65);
+                "
+              ></div>
+
+              <!-- Centered Content -->
+              <div
+                style="
+                  position: relative;
+                  z-index: 1;
+                  height: 100%;
+                  display: flex;
+                  flex-direction: column;
+                  align-items: center;
+                  justify-content: center;
+                  color: #fff;
+                "
+              >
+                <h5 class="mb-2">Nigeria</h5>
+                <p style="max-width: 90%">
+                  Rural healthcare outreach providing free medical screenings
+                  and maternal support in underserved communities.
+                </p>
+                <span class="fst-italic">Healthcare Initiative</span>
+              </div>
             </div>
           </div>
+
+          <!-- Country Item -->
           <div class="testimonial-item text-center">
             <img
-              class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4"
-              src="img/testimonial-2.jpg"
-              style="width: 100px; height: 100px"
+              class="img-fluid rounded-circle p-2 mx-auto mb-4"
+              src="https://flagpedia.net/data/flags/w1600/ke.png"
+              alt="Kenya Flag"
+              style="width: 100px; height: 100px; object-fit: cover"
             />
+
             <div class="testimonial-text rounded text-center p-4">
+              <h5 class="mb-2">Kenya</h5>
               <p>
-                Clita clita tempor justo dolor ipsum amet kasd amet duo justo
-                duo duo labore sed sed. Magna ut diam sit et amet stet eos sed
-                clita erat magna elitr erat sit sit erat at rebum justo sea
-                clita.
+                Clean water project installing solar-powered boreholes in
+                drought-prone regions.
               </p>
-              <h5 class="mb-1">Doner Name</h5>
-              <span class="fst-italic">Profession</span>
+              <span class="fst-italic">Water & Sanitation</span>
             </div>
           </div>
+
+          <!-- Country Item -->
           <div class="testimonial-item text-center">
             <img
-              class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4"
-              src="img/testimonial-3.jpg"
-              style="width: 100px; height: 100px"
+              class="img-fluid rounded-circle p-2 mx-auto mb-4"
+              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTFqHjwrUc12yG6OtKjzwPjxorVrcgQkqF8tA&s"
+              alt="India Flag"
+              style="width: 100px; height: 100px; object-fit: cover"
             />
-            <div class="testimonial-text rounded text-center p-4">
-              <p>
-                Clita clita tempor justo dolor ipsum amet kasd amet duo justo
-                duo duo labore sed sed. Magna ut diam sit et amet stet eos sed
-                clita erat magna elitr erat sit sit erat at rebum justo sea
-                clita.
-              </p>
-              <h5 class="mb-1">Doner Name</h5>
-              <span class="fst-italic">Profession</span>
+
+            <div
+              class="testimonial-text rounded text-center p-4"
+              style="
+                position: relative;
+                height: 300px;
+                background-image: url(&quot;https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQUaNTeo_9g4YII_dSMTIwZbLpawt-OOGmQzw&s&quot;);
+                background-repeat: no-repeat;
+                background-position: center;
+                background-size: cover;
+                overflow: hidden;
+              "
+            >
+              <!-- Overlay -->
+              <div
+                style="
+                  position: absolute;
+                  inset: 0;
+                  background: rgba(0, 0, 0, 0.65);
+                "
+              ></div>
+
+              <!-- Centered Content -->
+              <div
+                style="
+                  position: relative;
+                  z-index: 1;
+                  height: 100%;
+                  display: flex;
+                  flex-direction: column;
+                  align-items: center;
+                  justify-content: center;
+                  color: #fff;
+                "
+              >
+                <h5 class="mb-2">India</h5>
+                <p style="max-width: 90%">
+                  Education access program supporting school supplies and
+                  digital learning for children.
+                </p>
+                <span class="fst-italic">Education Program</span>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
+
     <!-- Footer Start -->
     <div
       class="container-fluid bg-dark text-white-50 footer mt-5 pt-5 wow fadeIn"
