--- a/index.html
+++ b/index.html
@@ -682,9 +682,9 @@
                     >
                       <div class="fade-group" style="transition: 0.4s">
                         <img
-                          height="110px"
+                          height="110px; "
                           class="img-fluid mb-4"
-                          src="img/con-2.png"
+                          src="img/icon-2.png"
                         />
                         <h4>Medical Treatment</h4>
                         <p>
